# brain-engine

./: .envrc  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  flake.nix
brain-engine-bin/: Cargo.toml
brain-engine-bin/assets/: dungeon-stone-floor.aseprite
brain-engine-bin/src/: main.rs
brain-engine-core/: Cargo.toml
brain-engine-core/src/: lib.rs  map.rs  map_tile.rs  screen.rs  tile_generator.rs
brain-engine-mcp/: Cargo.toml  README.md
brain-engine-mcp/src/: main.rs
