[package]
name = "brain-engine-bin"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "brain-engine-bin"
path = "src/main.rs"

[dependencies]
brain-engine-core = { path = "../brain-engine-core" }
bevy = "0.16"

# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[lints]
workspace = true
